--- a/Views/adAgregarUsuario/adAgregarUsuario.cshtml
+++ b/Views/adAgregarUsuario/adAgregarUsuario.cshtml
@@ -273,7 +273,7 @@
                                 change: function (data) {
                                     //console.log(data)
                                     var value = this.text();
-                                    if (value === "Liquidador") {
+                                    if (value === "Cerrador") {
                                         $("#@{@DIV_SeleccionarGasolineras}").removeClass("d-none")
                                         $("#@{@DIV_SeleccionarGasolineras}").addClass("d-block")
                                         _this.dataDropDownList()
